src/objects/ToDoTest__c.object
<CustomObject>
    <description>行動テスト用カスタムオブジェクト</description>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>取引先を選択します。</description>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>行動テスト</relationshipLabel>
        <relationshipName>CustomerRelation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExistTrade__c</fullName>
        <description>既存取引先との取引内容を入力します。</description>
        <label>既存取引内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <description>打ち合わせ内容を入力します。</description>
        <label>打ち合わせ内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MyMember__c</fullName>
        <description>打ち合わせ参加メンバーを表示します。</description>
        <label>自社参加メンバー</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewTrade__c</fullName>
        <description>新規取引時の取引内容を入力します。</description>
        <label>新規取引時内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ToMember__c</fullName>
        <description>相手先の参加メンバーを入力します。</description>
        <label>相手先参加メンバー</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ToName__c</fullName>
        <description>相手先の氏名を入力します。</description>
        <label>相手先氏名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToTell__c</fullName>
        <description>相手先の連絡先を入力します。</description>
        <label>連絡先</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TodoList__c</fullName>
        <description>今回の行動を選択します。</description>
        <label>行動リスト</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>新規顧客</fullName>
                </value>
                <value>
                    <fullName>既存顧客</fullName>
                </value>
                <value>
                    <fullName>打ち合わせ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>行動テスト</label>
    <listViews>
        <fullName>GroupMail_ToDoTest</fullName>
        <filterScope>Queue</filterScope>
        <label>メールテスト</label>
        <queue>GroupMail</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>行動テスト名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>